--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,12 @@ git:
   submodules: false
 
 before_install: 
+- sudo add-apt-repository ppa:longsleep/golang-backports
 - sudo apt update -y
 - sudo apt install python3 python3-pip python3-virtualenv hunspell myspell-en-us -y
-- virtualenv spell_pve && source spell_pve/bin/activate && pip install mistune && deactivate
+- virtualenv spell_pve && source spell_pve/bin/pip install mistune
+- sudo apt install golang-go
 
 script:
 - source spell_pve/bin/activate && ./.CI/spellchecker.sh && deactivate
+- liche -r .
