--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,16 @@ dist: xenial
 git:
   submodules: false
 
-before_install: 
+before_install:
+#- sudo add-apt-repository ppa:longsleep/golang-backports -y
 - sudo apt update -y
 - sudo apt install python3 python3-pip python3-virtualenv hunspell myspell-en-us -y
+- sudo apt search golang-1.13
+#- sudo apt install golang-go -y
+# https://github.com/raviqqe/liche/issues/26
+- export GO111MODULE=on && go get -u github.com/raviqqe/liche
 - virtualenv spell_pve && source spell_pve/bin/activate && pip install mistune && deactivate
 
 script:
 - source spell_pve/bin/activate && ./.CI/spellchecker.sh && deactivate
+- liche -r .
